# Nexus

./: .gitignore  Agent.md  README.md  docker-compose.logging.yml  docker-compose.sglang.yml  docker-compose.vllm.yml  docker-compose.yml  plan.md  ui_plan.md  worklog.md
contracts/: nexus_inference.proto
docs/: agent_client_guide.md  cli_commands_guide.md  grpc_agent_guide.md  grpc_gen_guide.md  llm_serving_agent_guide.md  msa_communication.md  security_baseline.md  shadow_traffic.md  yaml_guide.md
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: main.py  schemas.py
gateway/app/core/: circuit_breaker.py  config.py  logging.py  metrics.py  rate_limiter.py  redaction.py  security.py  shadow.py
gateway/app/grpc/: __init__.py
gateway/app/services/: proxy.py  router.py
gateway/nexus_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gateway/scripts/: agent_client_smoke.sh  grpc_agent_smoke.py
gateway/tests/: test_gateway.py
k8s/: README.md  kustomization.yaml
k8s/gateway/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service-lb.yaml  service.yaml
k8s/kserve/: README.md  checklist.md  inferenceservice.yaml
k8s/model-worker/: deployment.yaml  hpa.yaml  (+1 more)
mlops/: README.md
ops/: alertmanager.yml  build_push_gateway.sh  k8s_set_gateway_image.sh  observability_bootstrap.sh  observability_status.md  observability_summary.md  perf_tuning_report.md  prometheus.yml  prometheus_alerts.yml  runbook_quickstart.md  slo_runbook.md
scripts/: gen_grpc.sh  run_sglang.sh
ui/: README.md  package-lock.json  package.json
(+84 files in other folders)
